unpackaged/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Status__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Status__c</fullName>
    <description>Status indicating where quote is in its lifecycle.</description>
    <inlineHelpText>Statut indiquant la position du devis dans son cycle de vie.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rapport de visite</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <label>En Cours</label>
            </value>
            <value>
                <fullName>En Attente d&#39;approbation</fullName>
            </value>
            <value>
                <fullName>Approuvé</fullName>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
                <label>Devis Envoyé</label>
            </value>
            <value>
                <fullName>Denied</fullName>
                <label>Devis Refusé</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Devis Signé</label>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Draft (No Product)</fullName>
                <label>Brouillon (sans produits)</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Annulé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>