unpackaged/main/default/objects/SBQQ__Quote__c/fields/SBQQ__SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionTerm__c</fullName>
    <description>Subscription term used to prorate eligible products by day or month.  This has been set by your administrator.</description>
    <inlineHelpText>Durée d&#39;abonnement utilisée pour calculer les produits éligibles au prorata par jour ou par mois. Ce paramètre doit être défini par votre administrateur.</inlineHelpText>
    <label>Subscription Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>