unpackaged/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Uncalculated__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Uncalculated__c</fullName>
    <description>If selected, the quote hasn’t been calculated.</description>
    <formula>( NOT( ISNULL( SBQQ__LastCalculatedOn__c ) ) &amp;&amp; SBQQ__LastSavedOn__c &gt; SBQQ__LastCalculatedOn__c ) || ( NOT ( ISNULL ( SBQQ__LastSavedOn__c) ) &amp;&amp; ISNULL ( SBQQ__LastCalculatedOn__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Si cette option est sélectionnée, le devis n&#39;a pas encore été calculé.</inlineHelpText>
    <label>Uncalculated</label>
    <type>Checkbox</type>
</CustomField>