unpackaged/main/default/objects/SBQQ__Quote__c/fields/Sens_douverture_de_porte__c.field-meta.xml
<CustomField>
    <fullName>Sens_douverture_de_porte__c</fullName>
    <label>Sens d’ouverture de porte</label>
    <type>TextArea</type>
</CustomField>