unpackaged/main/default/objects/SBQQ__Quote__c/fields/Shipping_Area__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Area__c</fullName>
    <formula>IF
(
SBQQ__Account__r.Specific_Transportation__c=True,
Tech_Region__c,
IF
(
OR(
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;75&quot;,
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;77&quot;,
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;78&quot;,
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;91&quot;,
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;92&quot;,
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;93&quot;,
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;94&quot;,
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;95&quot;
)
,
&quot;IDF&quot;
,
IF
(
LEFT(SBQQ__ShippingPostalCode__c,2) = &quot;20&quot;
,
&quot;Corse&quot;
,
&quot;France&quot;)

)
)</formula>
    <label>Shipping Area</label>
    <type>Text</type>
</CustomField>