unpackaged/main/default/objects/SBQQ__Quote__c/fields/Si_autres_precisez__c.field-meta.xml
<CustomField>
    <fullName>Si_autres_precisez__c</fullName>
    <label>Si autres, précisez</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>