unpackaged/main/default/objects/SBQQ__Quote__c/fields/Si_oui_precisez_la_hauteur__c.field-meta.xml
<CustomField>
    <fullName>Si_oui_precisez_la_hauteur__c</fullName>
    <label>Si oui, précisez la hauteur</label>
    <type>TextArea</type>
</CustomField>