unpackaged/main/default/objects/SBQQ__Quote__c/fields/Specific_Financial_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Specific_Financial_Conditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conditions Financières Spécifique</label>
    <referenceTo>Dero_Fi__c</referenceTo>
    <relationshipLabel>CPQ Quotes (Conditions Financières Spécifique)</relationshipLabel>
    <relationshipName>CPQ_Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>