unpackaged/main/default/objects/SBQQ__Quote__c/fields/Specific_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Specific_Transportation__c</fullName>
    <formula>SBQQ__Account__r.Specific_Transportation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Spécifique</label>
    <type>Checkbox</type>
</CustomField>