unpackaged/main/default/objects/SBQQ__Quote__c/fields/Standard_au_plus_proche__c.field-meta.xml
<CustomField>
    <fullName>Standard_au_plus_proche__c</fullName>
    <label>Standard au plus proche</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CF 10B</fullName>
            </value>
            <value>
                <fullName>CM 25 B</fullName>
            </value>
            <value>
                <fullName>CM 10S</fullName>
            </value>
            <value>
                <fullName>CM 25S</fullName>
            </value>
            <value>
                <fullName>CM 55S</fullName>
            </value>
            <value>
                <fullName>CF 10</fullName>
            </value>
            <value>
                <fullName>CF 20</fullName>
            </value>
            <value>
                <fullName>CF 35</fullName>
            </value>
            <value>
                <fullName>CF 50</fullName>
            </value>
            <value>
                <fullName>CF 85</fullName>
            </value>
            <value>
                <fullName>CM 55 B</fullName>
            </value>
            <value>
                <fullName>CM 90S</fullName>
            </value>
            <value>
                <fullName>CM 25 SF</fullName>
            </value>
            <value>
                <fullName>CF 100</fullName>
            </value>
            <value>
                <fullName>CF 110</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>