unpackaged/main/default/objects/SBQQ__Quote__c/fields/Standard_Financial_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Standard_Financial_Conditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conditions Financières Standard</label>
    <referenceTo>Dero_Fi__c</referenceTo>
    <relationshipLabel>CPQ Quotes (Conditions Financières Standard)</relationshipLabel>
    <relationshipName>CPQ_Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>