unpackaged/main/default/objects/SBQQ__Quote__c/fields/Statut_de_la_demande__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_la_demande__c</fullName>
    <label>Statut de la demande</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accordée</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>