unpackaged/main/default/objects/SBQQ__Quote__c/fields/SumGroupsNetPrice__c.field-meta.xml
<CustomField>
    <fullName>SumGroupsNetPrice__c</fullName>
    <inlineHelpText>Le résultat de ce champ affiche la somme des groupes de ligne de devis après remise sans les montants de l&#39;Acompte / Dépôt de Garantie / Caution.</inlineHelpText>
    <label>Montant Remisé</label>
    <summarizedField>SBQQ__QuoteLineGroup__c.Sum_Of_Net_Price__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>