unpackaged/main/default/objects/SBQQ__Quote__c/fields/SumGroupsSpecialPrice__c.field-meta.xml
<CustomField>
    <fullName>SumGroupsSpecialPrice__c</fullName>
    <inlineHelpText>Le résultat de ce champ affiche la somme des groupes de ligne de devis avant remise sans les montants de l&#39;Acompte / Dépôt de Garantie / Caution.</inlineHelpText>
    <label>Montant Total</label>
    <summarizedField>SBQQ__QuoteLineGroup__c.Sum_of_Special_Price__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>