unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_After_Calculate__c.field-meta.xml
<CustomField>
    <fullName>Tech_After_Calculate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech After Calculate</label>
    <type>Checkbox</type>
</CustomField>