unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Alarme__c.field-meta.xml
<CustomField>
    <fullName>Tech_Alarme__c</fullName>
    <formula>If(  Tech_SV_Alarme__c &gt;= 1, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Alarme</label>
    <type>Checkbox</type>
</CustomField>