unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Alarme_Txt__c.field-meta.xml
<CustomField>
    <fullName>Tech_Alarme_Txt__c</fullName>
    <formula>if(Tech_SV_Alarme__c &gt;=1,&quot;alarme&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Alarme Txt</label>
    <type>Text</type>
</CustomField>