unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Approval_Autres_Precisez__c.field-meta.xml
<CustomField>
    <fullName>Tech_Approval_Autres_Precisez__c</fullName>
    <formula>IF(text( Si_autres_precisez__c )= text( Tech_Si_autres_precisez__c ), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Approval Autres Precisez</label>
    <type>Checkbox</type>
</CustomField>