unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Approval_Caution__c.field-meta.xml
<CustomField>
    <fullName>Tech_Approval_Caution__c</fullName>
    <formula>IF( text( Mois_caution__c)= text( Tech_Mois_caution__c ), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Approval Caution</label>
    <type>Checkbox</type>
</CustomField>