unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Approval_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Tech_Approval_Indexation__c</fullName>
    <formula>IF(text(Indexation__c)= text( Tech_Indexation__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Approval Indexation</label>
    <type>Checkbox</type>
</CustomField>