unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Approval_Mode_facturation__c.field-meta.xml
<CustomField>
    <fullName>Tech_Approval_Mode_facturation__c</fullName>
    <formula>IF( text( Mode_facturation__c)= text( Tech_Mode_facturation__c ), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Approval Mode facturation</label>
    <type>Checkbox</type>
</CustomField>