unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Approval_Paiement_en_avance__c.field-meta.xml
<CustomField>
    <fullName>Tech_Approval_Paiement_en_avance__c</fullName>
    <formula>IF( text( Paiement_en_avance__c)= text( Tech_Paiement_en_avance__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Approval Paiement en avance</label>
    <type>Checkbox</type>
</CustomField>