unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Approval_Pourcentage_Negocie__c.field-meta.xml
<CustomField>
    <fullName>Tech_Approval_Pourcentage_Negocie__c</fullName>
    <formula>IF(
				 Negociated_Rate__c &lt;&gt;  Tech_Negociated_Rate__c,
				TRUE,
				FALSE
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Approval Pourcentage Négocié</label>
    <type>Checkbox</type>
</CustomField>