unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_approval_unlock__c.field-meta.xml
<CustomField>
    <fullName>Tech_approval_unlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech approval unlock</label>
    <type>Checkbox</type>
</CustomField>