unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Caisson__c.field-meta.xml
<CustomField>
    <fullName>Tech_Caisson__c</fullName>
    <formula>IF( Tech_SV_Caisson__c &gt;= 1, True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Caisson</label>
    <type>Checkbox</type>
</CustomField>