unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_CD_Custom_Action__c.field-meta.xml
<CustomField>
    <fullName>Tech_CD_Custom_Action__c</fullName>
    <formula>IF( OR (ISPICKVAL(Quote_Type__c, &quot;Standard Quote&quot;), ISPICKVAL(Quote_Type__c, &quot;Non Standard Quote&quot;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech CD Custom Action</label>
    <type>Checkbox</type>
</CustomField>