unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_CD_Type_Duree__c.field-meta.xml
<CustomField>
    <fullName>Tech_CD_Type_Duree__c</fullName>
    <formula>IF( AND( OR(ISPICKVAL(Quote_Type__c, &quot;Standard Quote&quot;), ISPICKVAL(Quote_Type__c, &quot;Non Standard Quote&quot;)),  ISPICKVAL(Type_de_location__c, &quot;Courte Durée&quot;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech CD Type Duree</label>
    <type>Checkbox</type>
</CustomField>