unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Date_de_signature_client__c.field-meta.xml
<CustomField>
    <fullName>Tech_Date_de_signature_client__c</fullName>
    <description>Champ technique alimenté par Docusign pour la signature des contrats</description>
    <label>Tech_Date de signature client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>