unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Delai_reglement__c.field-meta.xml
<CustomField>
    <fullName>Tech_Delai_reglement__c</fullName>
    <label>Tech_Delai_reglement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delai_reglement</valueSetName>
    </valueSet>
</CustomField>