unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Departement__c.field-meta.xml
<CustomField>
    <fullName>Tech_Departement__c</fullName>
    <formula>LEFT(SBQQ__ShippingPostalCode__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Departement</label>
    <type>Text</type>
</CustomField>