unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Dero_Fi_Approval__c.field-meta.xml
<CustomField>
    <fullName>Tech_Dero_Fi_Approval__c</fullName>
    <formula>IF(
OR(
Tech_Approval_Mode_facturation__c = true,
Tech_Approval_delai_reglement__c = true,
Tech_Approval_Mode_reglement__c = true),
true,
if(
AND(
ISPICKVAL(Type_de_location__c, &quot;Courte Durée&quot;),
Tech_Approval_Paiement_en_avance__c = true),
True,
IF(
AND( ISPICKVAL(Type_de_location__c, &quot;Moyenne Durée&quot;),
OR(
Tech_Approval_Autres_Precisez__c = true,
Tech_Approval_depot_garantie__c = true,
Tech_Approval_Pourcentage_Negocie__c = true,
Tech_Approval_Indexation__c = true)),
True,
IF(
AND( ISPICKVAL(Type_de_location__c, &quot;Longue Durée&quot;),
OR(
Tech_Approval_Autres_Precisez__c = true,
Tech_Approval_Caution__c = true,
Tech_Approval_Pourcentage_Negocie__c = true,
Tech_Approval_Indexation__c = true)),
True,
False))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Dero Fi Approval</label>
    <type>Checkbox</type>
</CustomField>