unpackaged/main/default/objects/SBQQ__Quote__c/fields/TECH_Finaliser_devis__c.field-meta.xml
<CustomField>
    <fullName>TECH_Finaliser_devis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFC-1157</description>
    <label>TECH_Finaliser_devis</label>
    <type>Checkbox</type>
</CustomField>