unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Force_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Tech_Force_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Force_Recalculation</label>
    <type>Checkbox</type>
</CustomField>