unpackaged/main/default/objects/SBQQ__Quote__c/fields/TECH_ID18__c.field-meta.xml
<CustomField>
    <fullName>TECH_ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_ID18</label>
    <type>Text</type>
</CustomField>