unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Tech_Line_Items__c</fullName>
    <label>Tech Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>