unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Mode_facturation__c.field-meta.xml
<CustomField>
    <fullName>Tech_Mode_facturation__c</fullName>
    <label>Tech_Mode_facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_facturation</valueSetName>
    </valueSet>
</CustomField>