unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Mois_caution__c.field-meta.xml
<CustomField>
    <fullName>Tech_Mois_caution__c</fullName>
    <label>Tech_Mois_caution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mois_caution</valueSetName>
    </valueSet>
</CustomField>