unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Negociated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tech_Negociated_Rate__c</fullName>
    <label>Tech Pourcentage Négocié</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>