unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Paiement_en_avance__c.field-meta.xml
<CustomField>
    <fullName>Tech_Paiement_en_avance__c</fullName>
    <label>Tech_Paiement_en_avance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Paiement_en_avance</valueSetName>
    </valueSet>
</CustomField>