unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_PR_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Tech_PR_Line_Item__c</fullName>
    <label>Tech PR Line Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>