unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Recordtype_Name__c.field-meta.xml
<CustomField>
    <fullName>Tech_Recordtype_Name__c</fullName>
    <formula>OR(CASESAFEID(RecordTypeId) = $Label.Assembly_quote_rt_id,CASESAFEID(RecordTypeId) = $Label.HorsStandard_quote_rt_id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Recodetype Name</label>
    <type>Checkbox</type>
</CustomField>