unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Region__c.field-meta.xml
<CustomField>
    <fullName>Tech_Region__c</fullName>
    <label>Tech Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>