unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Save_Assemblage__c.field-meta.xml
<CustomField>
    <fullName>Tech_Save_Assemblage__c</fullName>
    <formula>If( AND(ISPICKVAL(Quote_Type__c, &quot;Assembly Quote&quot;), Prix_definis__c = true), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Save Assemblage</label>
    <type>Checkbox</type>
</CustomField>