unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_Si_autres_precisez__c.field-meta.xml
<CustomField>
    <fullName>Tech_Si_autres_precisez__c</fullName>
    <label>Tech_Si_autres_precisez</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>