unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_SV_Alarme__c.field-meta.xml
<CustomField>
    <fullName>Tech_SV_Alarme__c</fullName>
    <label>Tech SV Alarme</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>