unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_SV_Caisson__c.field-meta.xml
<CustomField>
    <fullName>Tech_SV_Caisson__c</fullName>
    <label>Tech SV Caisson</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>