unpackaged/main/default/objects/SBQQ__Quote__c/fields/Tech_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Tech_User_Profile__c</fullName>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech User Profile</label>
    <type>Text</type>
</CustomField>