unpackaged/main/default/objects/SBQQ__Quote__c/fields/TechPaiementAvanceNumber__c.field-meta.xml
<CustomField>
    <fullName>TechPaiementAvanceNumber__c</fullName>
    <formula>CASE(Paiement_en_avance__c,
						&quot;0%&quot;, 0 ,
						&quot;25%&quot;, 0.25 ,
						&quot;50%&quot;, 0.5 ,
						&quot;75%&quot;, 0.75 ,
						&quot;100%&quot;, 1 ,
						0
						)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TechPaiementAvanceNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>