unpackaged/main/default/objects/SBQQ__Quote__c/fields/TechStatusApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>TechStatusApprovalProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Status Approval Process</label>
    <type>Checkbox</type>
</CustomField>