unpackaged/main/default/objects/SBQQ__Quote__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <formula>SBQQ__Opportunity2__r.Contact_sur_Site__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone</label>
    <type>Text</type>
</CustomField>