unpackaged/main/default/objects/SBQQ__Quote__c/fields/Type_Location__c.field-meta.xml
<CustomField>
    <fullName>Type_Location__c</fullName>
    <formula>text(SBQQ__Opportunity2__r.Type_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Location</label>
    <type>Text</type>
</CustomField>