unpackaged/main/default/objects/SBQQ__Quote__c/fields/Type_Manutention__c.field-meta.xml
<CustomField>
    <fullName>Type_Manutention__c</fullName>
    <inlineHelpText>Obligatoire</inlineHelpText>
    <label>Type de Manutention *</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>