unpackaged/main/default/objects/SBQQ__Quote__c/fields/TypeProduits__c.field-meta.xml
<CustomField>
    <fullName>TypeProduits__c</fullName>
    <formula>text( SBQQ__Opportunity2__r.TypeProduits__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>