unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Assembly_Quote.recordType-meta.xml
<RecordType>
    <fullName>Assembly_Quote</fullName>
    <active>true</active>
    <label>Assembly Quote</label>
</RecordType>