unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Assembly_Quote_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Assembly_Quote_Read_Only</fullName>
    <active>true</active>
    <label>Assembly Quote - Read Only</label>
</RecordType>