unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Non_Standard_Quote.recordType-meta.xml
<RecordType>
    <fullName>Non_Standard_Quote</fullName>
    <active>true</active>
    <label>Non Standard Quote</label>
</RecordType>