unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Non_Standard_Quote_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Non_Standard_Quote_Read_Only</fullName>
    <active>true</active>
    <label>Non Standard Quote - Read Only</label>
</RecordType>