unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Standard_Quote_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Standard_Quote_Read_Only</fullName>
    <active>true</active>
    <label>Standard Quote - Read Only</label>
</RecordType>