unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Vehicle</fullName>
    <active>false</active>
    <label>Vehicule</label>
</RecordType>