unpackaged/main/default/objects/SBQQ__Quote__c/validationRules/Block_change_status_during_recalculation.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_change_status_during_recalculation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				Count_Recalculation_group_required__c &gt; 0,
				Ischanged( SBQQ__Status__c ),
				Text(SBQQ__Status__c) &lt;&gt; &#39;Draft&#39;,
				Text(SBQQ__Status__c) &lt;&gt; &#39;In Review&#39;				
				)</errorConditionFormula>
    <errorMessage>Your quote is currently under calculation. Please try in a few seconds.</errorMessage>
</ValidationRule>