unpackaged/main/default/objects/SBQQ__Quote__c/validationRules/No_Caution_dpt_de_garantie_if_CD.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Caution_dpt_de_garantie_if_CD</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( NOT( ISNEW() ),
				ISPICKVAL(Type_de_location__c, &quot;Courte Durée&quot;),
			OR(
							ISCHANGED(Mois_caution__c),
							ISCHANGED(Dpt_garantie__c),
							ISCHANGED(Si_autres_precisez__c),
							ISCHANGED(Indexation__c )))</errorConditionFormula>
    <errorMessage>Ce devis est &quot;Courte Durée&quot;. Vous n&#39;êtes pas autorisé à modifier les valeurs pour la caution ou le dépot de garantie.</errorMessage>
</ValidationRule>