unpackaged/main/default/objects/SBQQ__Quote__c/validationRules/Prevent_Creation_of_Several_IS.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Creation_of_Several_IS</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Information_Sheets__c &gt; 1</errorConditionFormula>
    <errorMessage>You cannot create more than one Information Sheet for this Quote.</errorMessage>
</ValidationRule>