unpackaged/main/default/objects/SBQQ__Quote__c/validationRules/VR_Approval_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Approval_Process</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				Approval_required__c = true,
				Tech_approval_unlock__c = false,
				OR(
								text(SBQQ__Status__c) = &#39;Quote Sent&#39;,
								text(SBQQ__Status__c) = &#39;Denied&#39;,
								text(SBQQ__Status__c) = &#39;Remise Accordée&#39;,
								text(SBQQ__Status__c) = &#39;Approved&#39;,
								text(SBQQ__Status__c) = &#39;Approuvé&#39;
								)
				)</errorConditionFormula>
    <errorMessage>Votre devis nécessite une approbation. Merci de cliquer sur le bouton &quot;Soumettre pour approbation&quot;</errorMessage>
</ValidationRule>